Alterações nos espaçamentos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Skill Up</title>
 </head>
 <body>
+    
     <div class="content">
    <header>
         <nav>
@@ -22,12 +24,12 @@
    <main>
         <section>
             <div class="cta-content">
-                <div class="cta-texts">
+                <div class="cta-texts" data-aos="fade-left">
                     <h1>Aprenda mais. Cresça mais.</h1>
                     <p class="subtitulo">Encontre os melhores cursos de tecnologia, design, negócios e mais, tudo em um só lugar.</p>
                     <a href="">Explorar Cursos</a>
                 </div>
-                <div class="cta-img">
+                <div class="cta-img" data-aos="zoom-out">
                     <img src="img/cta-img.svg" alt="">
                     <div class="views">
                         <p>Total de cursos</p>
@@ -38,7 +40,8 @@
         </section>
         <section>
             <div class="courses-content">
-                <div class="course-card">
+    
+                <div class="course-card"  data-aos="zoom-out">
                     <div class="card-icon">
                         <img src="img/design-svgrepo-com (1).svg" alt="">
                     </div>
@@ -46,7 +49,7 @@
                     <p class="subtitulo">Aprenda a criar interfaces visuais atraentes, trabalhar com tipografia, cores e usabilidade. Desenvolva habilidades em UI/UX, prototipagem e identidade visual.</p>
                     <a href="">Ver Cursos</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" data-aos="zoom-out">
                     <div class="card-icon">
                         <img src="img/programming-svgrepo-com.svg" alt="">
                     </div>
@@ -54,7 +57,7 @@
                     <p class="subtitulo">Domine linguagens de programação e lógica de código. Construa sites, aplicativos e sistemas funcionais, do básico ao avançado.</p>
                     <a href="">Ver Cursos</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" data-aos="zoom-out"> 
                     <div class="card-icon">
                         <img src="img/business-finance-money-svgrepo-com.svg" alt="">
                     </div>
@@ -62,7 +65,7 @@
                     <p class="subtitulo">Entenda como planejar, gerenciar e escalar empresas. Aprenda sobre empreendedorismo, gestão de projetos, finanças e estratégias de mercado.</p>
                     <a href="">Ver Cursos</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" data-aos="zoom-out">
                     <div class="card-icon">
                         <img src="img/photograph-svgrepo-com.svg" alt="">
                     </div>
@@ -70,7 +73,7 @@
                     <p class="subtitulo">Descubra técnicas de iluminação, composição e edição de imagens. Aprenda a transformar cliques em fotografias profissionais e criativo</p>
                     <a href="">Ver Cursos</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" data-aos="zoom-out">
                     <div class="card-icon">
                         <img src="img/c-coin-svgrepo-com.svg" alt="">
                     </div>
@@ -78,7 +81,7 @@
                     <p class="subtitulo">Mergulhe no universo das criptomoedas e blockchain. Entenda investimentos, segurança digital e como participar do mercado financeiro do futuro.</p>
                     <a href="">Ver Cursos</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" data-aos="zoom-out">
                     <div class="card-icon">
                         <img src="img/marketing-svgrepo-com (1).svg" alt="">
                     </div>
@@ -98,5 +101,13 @@
                 </ul>
             </div>
    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+  AOS.init({
+    duration: 800,   // duração padrão (ms)
+    offset: 120,     // distância em px antes do gatilho
+    once: false      // true = anima apenas uma vez
+  });
+</script>
 </body>
 </html>
