--- a/index.html
+++ b/index.html
@@ -1,113 +1,141 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Skill Up</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div class="content">
-   <header>
+      <header>
         <nav>
-            <div class="nav-bar">
-                <h3 id="#logo">Skill Up</h3>
-                <ul>
-                    <li><a href="">Explorar Cursos</a></li>
-                </ul>
-            </div>
+          <div class="nav-bar">
+            <h3 id="logo">Skill Up</h3>
+            <ul>
+              <li><a href="#design">Explorar Cursos</a></li>
+            </ul>
+          </div>
         </nav>
-   </header>
+      </header>
 
-   <main>
+      <main>
         <section>
-            <div class="cta-content">
-                <div class="cta-texts" data-aos="fade-left">
-                    <h1>Aprenda mais. Cresça mais.</h1>
-                    <p class="subtitulo">Encontre os melhores cursos de tecnologia, design, negócios e mais, tudo em um só lugar.</p>
-                    <a href="">Explorar Cursos</a>
-                </div>
-                <div class="cta-img" data-aos="zoom-out">
-                    <img src="img/cta-img.svg" alt="">
-                    <div class="views">
-                        <p>Total de cursos</p>
-                        <h5>15</h5>
-                    </div>
-                </div>
+          <div class="cta-content">
+            <div class="cta-texts" data-aos="fade-left">
+              <h1>Aprenda mais. Cresça mais.</h1>
+              <p class="subtitulo">
+                Encontre os melhores cursos de tecnologia, design, negócios e
+                mais, tudo em um só lugar.
+              </p>
+              <a href="#design">Explorar Cursos</a>
             </div>
+            <div class="cta-img" data-aos="zoom-out">
+              <img src="img/cta-img.svg" alt="Ilustração de aprendizado online" />
+              <div class="views">
+                <p>Total de cursos</p>
+                <h5>15</h5>
+              </div>
+            </div>
+          </div>
         </section>
+
         <section>
-            <div class="courses-content">
-    
-                <div class="course-card"  data-aos="zoom-out">
-                    <div class="card-icon">
-                        <img src="img/design-svgrepo-com (1).svg" alt="">
-                    </div>
-                    <h4>Design</h4>
-                    <p class="subtitulo">Aprenda a criar interfaces visuais atraentes, trabalhar com tipografia, cores e usabilidade. Desenvolva habilidades em UI/UX, prototipagem e identidade visual.</p>
-                    <a href="">Ver Cursos</a>
-                </div>
-                <div class="course-card" data-aos="zoom-out">
-                    <div class="card-icon">
-                        <img src="img/programming-svgrepo-com.svg" alt="">
-                    </div>
-                    <h4>Programação</h4>
-                    <p class="subtitulo">Domine linguagens de programação e lógica de código. Construa sites, aplicativos e sistemas funcionais, do básico ao avançado.</p>
-                    <a href="">Ver Cursos</a>
-                </div>
-                <div class="course-card" data-aos="zoom-out"> 
-                    <div class="card-icon">
-                        <img src="img/business-finance-money-svgrepo-com.svg" alt="">
-                    </div>
-                    <h4>Negócios</h4>
-                    <p class="subtitulo">Entenda como planejar, gerenciar e escalar empresas. Aprenda sobre empreendedorismo, gestão de projetos, finanças e estratégias de mercado.</p>
-                    <a href="">Ver Cursos</a>
-                </div>
-                <div class="course-card" data-aos="zoom-out">
-                    <div class="card-icon">
-                        <img src="img/photograph-svgrepo-com.svg" alt="">
-                    </div>
-                    <h4>Fotografia</h4>
-                    <p class="subtitulo">Descubra técnicas de iluminação, composição e edição de imagens. Aprenda a transformar cliques em fotografias profissionais e criativo</p>
-                    <a href="">Ver Cursos</a>
-                </div>
-                <div class="course-card" data-aos="zoom-out">
-                    <div class="card-icon">
-                        <img src="img/c-coin-svgrepo-com.svg" alt="">
-                    </div>
-                    <h4>Cripto</h4>
-                    <p class="subtitulo">Mergulhe no universo das criptomoedas e blockchain. Entenda investimentos, segurança digital e como participar do mercado financeiro do futuro.</p>
-                    <a href="">Ver Cursos</a>
-                </div>
-                <div class="course-card" data-aos="zoom-out">
-                    <div class="card-icon">
-                        <img src="img/marketing-svgrepo-com (1).svg" alt="">
-                    </div>
-                    <h4>Marketing</h4>
-                    <p class="subtitulo">Aprenda a criar campanhas eficientes, dominar redes sociais e entender o comportamento do consumidor. Torne-se capaz de atrair e engajar públicos.</p>
-                    <a href="">Ver Cursos</a>
-                </div>
+          <div class="courses-content">
+            <div class="course-card" data-aos="zoom-out">
+              <div class="card-icon">
+                <img src="img/design-svgrepo-com (1).svg" alt="Icon de design" />
+              </div>
+              <h4 id="design">Design</h4>
+              <p class="subtitulo">
+                Aprenda a criar interfaces visuais atraentes, trabalhar com
+                tipografia, cores e usabilidade. Desenvolva habilidades em
+                UI/UX, prototipagem e identidade visual.
+              </p>
+              <a href="">Ver Cursos</a>
             </div>
+            <div class="course-card" data-aos="zoom-out">
+              <div class="card-icon">
+                <img src="img/programming-svgrepo-com.svg" alt="Icon de Programação" />
+              </div>
+              <h4>Programação</h4>
+              <p class="subtitulo">
+                Domine linguagens de programação e lógica de código. Construa
+                sites, aplicativos e sistemas funcionais, do básico ao avançado.
+              </p>
+              <a href="" id="programação">Ver Cursos de Programação</a>
+            </div>
+            <div class="course-card" data-aos="zoom-out">
+              <div class="card-icon">
+                <img src="img/business-finance-money-svgrepo-com.svg" alt="Icon de Negócios" />
+              </div>
+              <h4>Negócios</h4>
+              <p class="subtitulo">
+                Entenda como planejar, gerenciar e escalar empresas. Aprenda
+                sobre empreendedorismo, gestão de projetos, finanças e
+                estratégias de mercado.
+              </p>
+              <a href="" id="negocios">Ver Cursos de Negócios</a>
+            </div>
+            <div class="course-card" data-aos="zoom-out">
+              <div class="card-icon">
+                <img src="img/photograph-svgrepo-com.svg" alt="Icon de Fotografia" />
+              </div>
+              <h4>Fotografia</h4>
+              <p class="subtitulo">
+                Descubra técnicas de iluminação, composição e edição de imagens.
+                Aprenda a transformar cliques em fotografias profissionais e
+                criativo
+              </p>
+              <a href="" id="#fotografia">Ver Cursos de Fotografia</a>
+            </div>
+            <div class="course-card" data-aos="zoom-out">
+              <div class="card-icon">
+                <img src="img/c-coin-svgrepo-com.svg" alt="Icon de Cripto" />
+              </div>
+              <h4>Cripto</h4>
+              <p class="subtitulo">
+                Mergulhe no universo das criptomoedas e blockchain. Entenda
+                investimentos, segurança digital e como participar do mercado
+                financeiro do futuro.
+              </p>
+              <a href="" id="cripto">Ver Cursos de Cripto</a>
+            </div>
+            <div class="course-card" data-aos="zoom-out">
+              <div class="card-icon">
+                <img src="img/marketing-svgrepo-com (1).svg" alt="Icon de Marketing" />
+              </div>
+              <h4>Marketing</h4>
+              <p class="subtitulo">
+                Aprenda a criar campanhas eficientes, dominar redes sociais e
+                entender o comportamento do consumidor. Torne-se capaz de atrair
+                e engajar públicos.
+              </p>
+              <a href="" id="marketing">Ver Cursos de Marketing</a>
+            </div>
+          </div>
         </section>
-   </main>
-   </div>
+      </main>
+    </div>
+
     <footer>
-        <div class="footer-bar">
-                <h3 id="#logo">Skill Up</h3>
-                <ul>
-                    <li><a href="">Explorar Cursos</a></li>
-                </ul>
-            </div>
-   </footer>
+      <div class="footer-bar">
+        <h3 id="logo-footer">Skill Up</h3>
+        <ul>
+          <li><a href="#design">Explorar Cursos</a></li>
+        </ul>
+      </div>
+    </footer>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-  AOS.init({
-    duration: 800,   // duração padrão (ms)
-    offset: 120,     // distância em px antes do gatilho
-    once: false      // true = anima apenas uma vez
-  });
-</script>
-</body>
+      AOS.init({
+        duration: 800, 
+        offset: 120, 
+        once: false, 
+      });
+    </script>
+
+  </body>
 </html>
